--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: ASITACAMPUS
 description: 明日学院主页
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://avatars.githubusercontent.com/u/132128331?s=400&u=7d8d01e515b22aa0256d17e65efdb54f191c4bdd&v=4
 #
 # Flags below are optional
 #
